--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation "com.github.debop:koda-time:1.2.1"
 
     // Room
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
